<resources>
    <string name="app_name">StudentNetworkingApp</string>
    <string name="login_text">Connect anytime anywhere</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="post_events">Post Events</string>
    <string name="sign_out">Logout</string>
    <string name="sign_in">Sign In With Google</string>
    <string name="title_activity_announcement_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="dateTime">Date Time :</string>
    <string name="duration">Duration :</string>
    <string name="location">Location :</string>
    <string name="register">I am Interested</string>
    <string name="post">POST</string>
    <string name="extracurricular">Extracurricular</string>
    <string name="academics">Academics</string>
    <string name="contacts">Contacts</string>
    <string name="your_enrollments">Your Enrollments</string>
    <string name="unregister">Not Interested</string>
    <string name="no_enrollments">You have no enrollments</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="published_by">Published By:</string>
    <string name="category">Category</string>
    <string name="empty_list">No Announcement Posted</string>

    <string-array name="Categories">
        <item>ACADEMICS</item>
        <item>CAREER</item>
        <item>FUN ACTIVITY</item>
        <item>GROUP</item>
        <item>INTERNATIONAL STUDENT</item>
        <item>SPORTS</item>
    </string-array>

</resources>